# Plaatbruggen-App

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  README.md  demo_warning.py  pyproject.toml  requirements.txt  requirements_dev.txt  ruft.py  run_enhanced_tests.py  setup_dev.py  temp_mypy_test.py  test_colors.py  test_precommit_colors.py  test_temporary_failure_demo.py  viktor.config.toml
.cursor/rules/: coding_standards.mdc  project_structure.mdc  viktor_3d_modeling_tips.mdc  viktor_sdk_usage.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy_dev.yml
app/: __init__.py  app.py  constants.py
app/bridge/: __init__.py  controller.py  geometry_functions.py  parametrization.py  utils.py
app/common/: __init__.py  map_utils.py
app/overview_bridges/: __init__.py  controller.py  parametrization.py  utils.py
docs/: architecture.md  code_style.md  development_workflow.md  git issues workflow.md  github workflow.md  testing_uitleg.md  tijdelijke git workflow.md
resources/: Bruggenkaart.shp  betonstaalkwaliteit.csv  filtered_bridges.json  style.css  template_eindrapport.docx
resources/gis/: Bruggenkaart.shx
resources/templates/: template_eindrapport.docx
scripts/: __init__.py  auto_fix_and_push.py  fix_code.py  quality_check_and_push.py  run_enhanced_tests.py  run_mypy.py  run_mypy_warning.py  run_ruff_check.py  run_ruff_check_warning.py  run_ruff_format.py  run_ruff_format_warning.py  run_tests_warning.py  run_viktor_tests.py  show_merge_warning.py  smart_auto_fix_and_validate.py
src/combinations/: __init__.py  load_factors.py
src/common/: __init__.py  gis_utils.py  materials.py  plot_utils.py
src/geometry/: __init__.py  cross_section.py  horizontal_section.py  load_zone_geometry.py  load_zone_plot.py  longitudinal_section.py  model_creator.py  old_geom_functions.py  top_view_plot.py
src/integrations/: README_SCIA_INTEGRATION.md  __init__.py  idea_interface.py  scia_interface.py
src/report/: __init__.py  report_functions.py
tests/: test_demo_failure.py  test_temp_failure.py  test_temporary_failure_demo.py  test_utils.py
tests/test_app/: __init__.py
tests/test_data/: __init__.py  bridge_complex_params.json  bridge_default_params.json  overview_bridges_default_params.json  seed_loader.py
viktor/: __init__.py
(+29 files in other folders)
