# Build settings
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Project settings
[project]
name = "automatisch-toetsmodel-plaatbruggen"
description = "A short description of your package"
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]

# Setuptool settings
[tool.setuptools.dynamic]
version = { attr = "viktor.__version__" }
readme = { file = "README.md", content-type = "text/markdown" }
dependencies = { file = "requirements.txt" }

[tool.setuptools.dynamic.optional-dependencies]
minimal_requirements = { file = "requirements.txt" }
dev = { file = "requirements_dev.txt" }

[tool.setuptools.packages.find]
include = ["../automatisch-toetsmodel-plaatbruggen"]

# mypy settings
[tool.mypy]
python_version = "3.12"
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["viktor.*", "geopandas.*", "shapely.*", "plotly.*", "munch.*", "trimesh.*", "psutil.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.bridge.parametrization"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "src.geometry.model_creator"
disable_error_code = ["union-attr"]